Authentication functionality ready with minor topics to close

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,13 @@
 .list-group-item {
   line-height: 2.5;
 }
+
+#errors {
+  font-size: 12px;
+  border: 1px solid red;
+  padding: 4px;
+}
+
+.error {
+  color: red;
+}
