--- a/views/profesionalexperience.handlebars
+++ b/views/profesionalexperience.handlebars
@@ -24,7 +24,7 @@
         </div>
 
     </form>
-     {{!-- <div class="row">
+      <div class="row">
     <div class="col s12">
       <div class="row">
         <div class="input-field col s12">
@@ -34,6 +34,6 @@
         </div>
       </div>
     </div>
-  </div> --}}
+  </div> 
         
 </div>
