--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,83 +3,19 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
+  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">-->
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
   <title>Home Page</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="html2pdf.bundle.min.js"></script>
+    <!--<script src="html2pdf.bundle.min.js"></script>-->
 
   
   <!--<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>-->
-  <script>
-    $(document).ready(function () {
-      //var Api2Pdf = require('api2pdf');   
-      //var a2pClient = new Api2Pdf('591b4741-015b-40c1-a51c-21e77ce15bbb');
-      //var company=["apple", "microsoft", "google"];
-      //  $('input.autocomplete').autocomplete({
-      //  source: company
-      // });
-      //});
-
-      $('input.autocomplete').keyup(function (event) {
-        event.preventDefault();
-        $("#sug").empty();
-        var truefalse = true;
-        console.log("h");
-        var selected = "";
-        var company = $('input.autocomplete').val().trim();
-        console.log(company);
-        $.ajax({
-          type: "GET",
-          url: "https://autocomplete.clearbit.com/v1/companies/suggest?query=" + company,
-          async: true,
-          dataType: "json",
-          success: function (response) {
-            var outArr = [];
-            //console.log(response);
-            //console.log(response[0]);
-            //console.log(response.length);
-            for (var x = 0; x < response.length; x++) {
-              //console.log(response[x].name);
-              var div = $("<div>");
-              div.text(response[x].name);
-              div.attr("data-name", response[x].name);
-              div.addClass("companySug");
-              $("#sug").append(div);
-            }
-            $(".companySug").off();
-            $(".companySug").on("click", function (event) {
-              if (truefalse === true) {
-                event.preventDefault();
-                console.log("hola");
-                selected = $(this).attr("data-name");
-                $('input.autocomplete').text(selected);
-                // var selected = $(this).val();
-                //console.log($(this));
-                console.log("selected " + selected);
-                truefalse = false;
-              }
-              else {
-                console.log("not");
-              }
-            })
-          },
-          error: function (xhr, status, err) {
-            // This time, we do not end up here!
-
-          }
-        });
-      });
-      $("#submit").off();
-      $("#submit").on("click", function generatePDF(event) {
-        event.preventDefault();
-        var print = $(".html");
-        html2pdf().from(print).save();
-      });
-    })
-
-  </script>
 
 </head>
 
